<?xml version="1.0"?>
<package format="2">
  <name>afl_behavior_tree</name>
  <version>0.0.0</version>
  <description>The afl_behavior_tree package</description>

  <maintainer email="jian-hong@todo.todo">jian-hong</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>afl_fork_control</depend>
  <depend>aflctrl2</depend>
  <depend>tf</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>afl_detection</build_depend>
  <build_depend>reconfigure_client</build_depend>
  <build_depend>move_base</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>reconfigure_client</build_export_depend>
  <build_export_depend>move_base</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>reconfigure_client</exec_depend>
  <exec_depend>move_base</exec_depend>

  <export>
  </export>
</package>
